# mxcalc

./: .gitignore  README.md  main.py  pyproject.toml
src/mxcalc/: interface.py
tests/: test_placeholder.py
