[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mxcalc"  # The name used for 'pip install'
version = "0.1.2"
description = "A matix calculator which performs matrix operations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.scripts]
mxcalc = "mxcalc.main:main" # Optional: Creates a CLI command

[project.urls]
"Homepage" = "https://github.com/dkrnr/mxcalc"
"Bug Tracker" = "https://github.com/dkrnr/mxcalc/issues"
